refactor(service): 替换 Collectors.toList()为 toList()- 统一使用新的 toList() 方法替代旧的 Collectors.toList() - 简化代码并提高可读性 - 涉及饮食、运动、食物、睡眠和饮水记录服务实现类 - 更新全局异常处理中的参数校验错误收集方式